# Guitar-vst

./: CMakeLists.txt  ChordEngine.cpp  ChordEngine.h  Editor.cpp  Editor.h  FavoritesStore.cpp  FavoritesStore.h  KeySwitch.cpp  KeySwitch.h  Main.cpp  MidiExporter.cpp  MidiExporter.h  PatternLibrary.cpp  PatternLibrary.h  README.md  RhythmEngine.cpp  RhythmEngine.h
